--- a/view/startbootstrap/css/styles.css
+++ b/view/startbootstrap/css/styles.css
@@ -4432,7 +4432,7 @@ textarea.form-control-lg {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(247, 242, 242, 0.9) !important;
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
   color: rgba(0, 0, 0, 0.9);
