modal iteration in proces

--- a/view/startbootstrap/css/styles.css
+++ b/view/startbootstrap/css/styles.css
@@ -11273,6 +11273,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-/* .carousel-inner{
- height: 5px !important;
+/* .modal{
+
+  display: block !important;
 } */
