--- a/view/startbootstrap/css/styles.css
+++ b/view/startbootstrap/css/styles.css
@@ -11273,7 +11273,8 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-/* .modal{
+.zoom:hover{
 
-  display: block !important;
-} */
+   transform: scale(1.5);
+
+}
